added primary and secondary blocks

--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
         </div>
     </header>
 
+    <div class="sections-wrapper">
+        <div class="row">
+
+            <!-- Primary -->
+            <div class="primary">
+                <section class="about-me">
+                    <div class="about-me-inner">
+
+                    </div>
+
+                </section>
+
+            </div>
+
+            <!-- Secondary -->
+            <div class="secondary">
+                <aside class="aside-info">
+
+                </aside>
+
+            </div>
+
+        </div>
+    </div>
+
 </body>
 
 </html>
