fixed resume path location

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <i class="fab fa-github fa-border icons github" aria-hidden="true"></i>
                     </a>
 
-                    <a href="./resume.pdf" target="_blank">
+                    <a href="./resources/resume.pdf" target="_blank">
                         <i class="fas fa-file fa-border icons resume" aria-hidden="true"></i>
                     </a>
                 </div>
