readme line space fixing and target links to open in new tab, if possible

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <h2 class="desc">B.S. Data Science and Applied Mathematics</h2>
 
                 <div class="socials clearfix">
-                    <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/">
+                    <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
                         <!-- <i class="fab fa-linkedin-in icons"></i> -->
                         <i class="fab fa-linkedin-in fa-border icons linkedin" aria-hidden="true"></i>
                     </a>
-                    <a href="https://github.com/kennyngod">
+                    <a href="https://github.com/kennyngod" target="_blank">
                         <i class="fab fa-github fa-border icons github" aria-hidden="true"></i>
                     </a>
 
