contact me box v1

--- a/index.html
+++ b/index.html
@@ -56,7 +56,23 @@
             <!-- Secondary -->
             <div class="secondary">
                 <aside class="aside-info">
+                    <div class="contact-me">
+                        <h2 class="h2-header">Contact Me</h2>
+                        <div class="content">
+                            <ul style="padding-left: 0px; list-style: none;">
+                                <li>
+                                    <i class="fas fa-map-marker-alt about-me-icons" style="margin-right: 12px;"></i>
+                                    Ann Arbor, Michigan
+                                </li>
 
+                                <li>
+                                    <i class="fas fa-envelope about-me-icons"></i>
+                                    <a href="mailto: kngo@umich.edu">kngo@umich.edu</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
                 </aside>
 
             </div>
