--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"> <!-- for logos -->
+    <link rel="shortcut icon" href="./resources/favicon.ico"> <!-- For website icon in the tab of browsers : MUST BE .ico FILE-->
 </head>
 
 <body>
