added and started about me section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <!-- website template for inspiration: http://btamada.github.io -->
     <!-- my info, website links -->
+    <!-- Header -->
     <header class="header">
         <div class="container clearfix" style="margin-left: 20px; margin-right: 20px;">
             <img class="image-profile pull-left" src="./resources/blank-profile.png"
@@ -20,7 +21,8 @@
             <div class="profile-content pull-left">
                 <h1 class="name clearfix">Kenny Ngo</h1>
                 <h2 class="desc clearfix">3rd Year Student | University of Michigan &ndash; Ann Arbor</h2>
-                <h2 class="desc">B.S. Data Science and Applied Mathematics</h2>
+                <h2 class="desc">B.S. Data Science | B.S. Applied Mathematics</h2>
+                <h4 class="desc">&emsp;Mathematics Focus in Numerical and Applied Analysis</h4>
 
                 <div class="socials clearfix">
                     <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
@@ -39,6 +41,7 @@
 
         </div>
     </header>
+    <!-- End Header -->
 
     <div class="sections-wrapper">
         <div class="row">
@@ -47,12 +50,20 @@
             <div class="primary">
                 <section class="about-me">
                     <div class="about-me-inner">
+                        <h2 class="h2-header">About Me</h2>
+                        <div class="content" style="line-height: 150%;">
+                            <!-- TODO: elaborate / write more -->
+                            &emsp; I am a third year student studying data science and applied mathematics and the University of Michigan &ndash; Ann Arbor. My interest in web development began when I realized how limited Python and R is at displaying information.
 
+                            <br> <br>
+                            &emsp; I have also picked up an interest in biology, specifically bioinformatics. My goal is to get a research position in either the biology or medical field with a primary focus in data and data anaylsis.
+                        </div>
                     </div>
 
                 </section>
 
             </div>
+            <!-- End Primary -->
 
             <!-- Secondary -->
             <div class="secondary">
@@ -77,6 +88,7 @@
                 </aside>
 
             </div>
+            <!-- End Secondary -->
 
         </div>
     </div>
