added university aside section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
             <div class="profile-content pull-left">
                 <h1 class="name clearfix">Kenny Ngo</h1>
-                <h2 class="desc clearfix">3rd Year Student | University of Michigan &ndash; Ann Arbor</h2>
-                <h2 class="desc">B.S. Data Science | B.S. Applied Mathematics</h2>
-                <h4 class="desc">&emsp;Mathematics Focus in Numerical and Applied Analysis</h4>
+                <h2 class="desc clearfix">3rd Year Student</h2>
 
                 <div class="socials clearfix">
                     <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
@@ -49,7 +47,7 @@
             <!-- Primary -->
             <div class="primary">
                 <section class="about-me">
-                    <div class="about-me-inner">
+                    <div class="inner">
                         <h2 class="h2-header">About Me</h2>
                         <div class="content" style="line-height: 150%;">
                             <!-- TODO: elaborate / write more -->
@@ -62,13 +60,31 @@
 
                 </section>
 
+                <section class="projects">
+                    <div class="inner">
+                        <h2 class="h2-header">Projects</h2>
+                        <div class="content">
+                            <div class="password-crack">
+                                <h3 class="h3-title">Timing Attack Password Cracker &emsp;&emsp; <a href="https://github.com/kennyngod/password-cracker">github</a></h3>
+                                <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.</p>
+
+                                <img src="https://image.shutterstock.com/image-vector/pocket-watch-snakes-rose-hip-600w-1677214735.jpg">
+
+                                <p>Insert project description here.</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </section>
+
             </div>
             <!-- End Primary -->
 
             <!-- Secondary -->
             <div class="secondary">
                 <aside class="aside-info">
-                    <div class="contact-me">
+                    <div class="section-inner">
                         <h2 class="h2-header">Contact Me</h2>
                         <div class="content">
                             <ul style="padding-left: 0px; list-style: none;">
@@ -83,6 +99,39 @@
                                 </li>
 
                             </ul>
+                        </div>
+                    </div>
+                </aside>
+
+                <aside class="aside-info">
+                    <div class="section-inner">
+                        <h2 class="h2-header">Education</h2>
+                        <div class="content">
+                            <div class="item">
+                                <i class="fas fa-school" style="margin-right: 6px;"></i>
+                                <h3 class="title">
+                                    B.S. Data Science
+                                </h3>
+                                <h3 class="title" style="margin-left: 31px; display: inline-block;">
+                                    B.S. Applied Mathematics
+                                </h3>
+                                <h4 class="university">
+                                    University of Michigan &ndash; Ann Arbor
+                                </h4>
+                            </div>
+                            <div class="item">
+                                <i class="fas fa-graduation-cap" style="margin-right: 6px;"></i>
+                                <h3 class="title">
+                                    High School Diploma
+                                </h3>
+                                <h3 class="title" style="margin-left: 60px; display: inline-block; font-size: 14px">
+                                    Summa Cum Laude
+                                </h3>
+                                <h4 class="university">
+                                    East Kentwood High School
+                                </h4>
+                            </div>
+
                         </div>
                     </div>
                 </aside>
