technical skills section and password cracker project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"> <!-- for logos -->
-    <link rel="shortcut icon" href="./resources/favicon.ico"> <!-- For website icon in the tab of browsers : MUST BE .ico FILE-->
+    <link rel="shortcut icon" href="./resources/favicon.ico">
+    <!-- For website icon in the tab of browsers : MUST BE .ico FILE-->
 </head>
 
 <body>
@@ -20,7 +21,7 @@
 
             <div class="profile-content pull-left">
                 <h1 class="name clearfix">Kenny Ngo</h1>
-                <h2 class="desc clearfix">3rd Year Student</h2>
+                <h2 class="desc clearfix">3rd Year Student | University of Michigan &ndash; Ann Arbor</h2>
 
                 <div class="socials clearfix">
                     <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
@@ -51,10 +52,14 @@
                         <h2 class="h2-header">About Me</h2>
                         <div class="content" style="line-height: 150%;">
                             <!-- TODO: elaborate / write more -->
-                            &emsp; I am a third year student studying data science and applied mathematics and the University of Michigan &ndash; Ann Arbor. My interest in web development began when I realized how limited Python and R is at displaying information.
+                            &emsp; I am a third year student studying data science and applied mathematics and the
+                            University of Michigan &ndash; Ann Arbor. My interest in web development began when I
+                            realized how limited Python and R is at displaying information.
 
                             <br> <br>
-                            &emsp; I have also picked up an interest in biology, specifically bioinformatics. My goal is to get a research position in either the biology or medical field with a primary focus in data and data anaylsis.
+                            &emsp; I have also picked up an interest in biology, specifically bioinformatics. My goal is
+                            to get a research position in either the biology or medical field with a primary focus in
+                            data and data anaylsis.
                         </div>
                     </div>
 
@@ -65,10 +70,13 @@
                         <h2 class="h2-header">Projects</h2>
                         <div class="content">
                             <div class="password-crack">
-                                <h3 class="h3-title">Timing Attack Password Cracker &emsp;&emsp; <a href="https://github.com/kennyngod/password-cracker">github</a></h3>
-                                <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.</p>
+                                <h3 class="h3-title">Timing Attack Password Cracker &emsp;&emsp; <a
+                                        href="https://github.com/kennyngod/password-cracker">github</a></h3>
+                                <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.
+                                </p>
 
-                                <img src="https://image.shutterstock.com/image-vector/pocket-watch-snakes-rose-hip-600w-1677214735.jpg">
+                                <img
+                                    src="./resources/hacker.svg" style="height: 40vh; width: auto;">
 
                                 <p>Insert project description here.</p>
                             </div>
@@ -118,6 +126,7 @@
                                 <h4 class="university">
                                     University of Michigan &ndash; Ann Arbor
                                 </h4>
+
                             </div>
                             <div class="item">
                                 <i class="fas fa-graduation-cap" style="margin-right: 6px;"></i>
@@ -132,6 +141,112 @@
                                 </h4>
                             </div>
 
+                        </div>
+                    </div>
+                </aside>
+
+                <aside class="aside-info">
+                    <div class="section-inner">
+                        <h2 class="h2-header">Technical Skills</h2>
+                        <div class="content">
+                            <div class="skillset">
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        C++
+                                        <span class="level-label">
+                                            Extremely Comfortable
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="95%" style="width: 95%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        Python
+                                        <span class="level-label">
+                                            Very Comfortable
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="90%" style="width: 90%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        R
+                                        <span class="level-label">
+                                            Somewhat Comfortable
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="60%" style="width: 60%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        Git
+                                        <span class="level-label">
+                                            Comfortable with Basics
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="55%" style="width: 55%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        Java
+                                        <span class="level-label">
+                                            Comfortable
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="45%" style="width: 45%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        HTML 5
+                                        <span class="level-label">
+                                            Beginner but Confident
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="30%" style="width: 30%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        CSS 3
+                                        <span class="level-label">
+                                            Beginner but Confident
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="30%" style="width: 30%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        JavaScript (ES6)
+                                        <span class="level-label">
+                                            Beginner and Clueless
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="10%" style="width: 10%"></div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </aside>
