--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Kenny Ngo's Website</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"> <!-- for logos -->
     <link rel="shortcut icon" href="./resources/favicon.ico">
@@ -75,8 +76,7 @@
                                 <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.
                                 </p>
 
-                                <img
-                                    src="./resources/hacker.svg" style="height: 40vh; width: auto;">
+                                <img src="./resources/hacker.svg" style="height: 40vh; width: auto;">
 
                                 <p>Insert project description here.</p>
                             </div>
@@ -243,6 +243,18 @@
                                     </h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="10%" style="width: 10%"></div>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        LaTeX
+                                        <span class="level-label">
+                                            Beginner and Clueless
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="50%" style="width: 50%"></div>
                                     </div>
                                 </div>
 
