possible fix for zooming in/out

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.
                                 </p>
 
-                                <img src="./resources/hacker.svg" style="height: 40vh; width: auto;">
+                                <img src="./resources/hacker.svg" style="height: 40vh; width: auto; display: flex; justify-content: center; align-items: center; margin: auto;">
 
                                 <p>Insert project description here.</p>
                             </div>
