added Jinja2 to skills library

--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
                 <h2 class="desc clearfix">3rd Year Student | University of Michigan &ndash; Ann Arbor</h2>
 
                 <div class="socials clearfix">
-                    <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
-                        <!-- <i class="fab fa-linkedin-in icons"></i> -->
-                        <i class="fab fa-linkedin-in fa-border icons linkedin" aria-hidden="true"></i>
-                    </a>
-                    <a href="https://github.com/kennyngod" target="_blank">
-                        <i class="fab fa-github fa-border icons github" aria-hidden="true"></i>
-                    </a>
+                    <nav>
+                        <a href="https://www.linkedin.com/in/kenny-ngo-534b71172/" target="_blank">
+                            <!-- <i class="fab fa-linkedin-in icons"></i> -->
+                            <i class="fab fa-linkedin-in fa-border icons linkedin" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://github.com/kennyngod" target="_blank">
+                            <i class="fab fa-github fa-border icons github" aria-hidden="true"></i>
+                        </a>
 
-                    <a href="./resources/resume.pdf" target="_blank">
-                        <i class="fas fa-file fa-border icons resume" aria-hidden="true"></i>
-                    </a>
+                        <a href="./resources/resume.pdf" target="_blank">
+                            <i class="fas fa-file fa-border icons resume" aria-hidden="true"></i>
+                        </a>
+                    </nav>
                 </div>
             </div>
 
@@ -53,7 +55,7 @@
                         <h2 class="h2-header">About Me</h2>
                         <div class="content" style="line-height: 150%;">
                             <!-- TODO: elaborate / write more -->
-                            &emsp; I am a third year student studying data science and applied mathematics and the
+                            &emsp; I am a third year student studying data science and applied mathematics at the
                             University of Michigan &ndash; Ann Arbor. My interest in web development began when I
                             realized how limited Python and R is at displaying information.
 
@@ -76,7 +78,8 @@
                                 <p class="caption">Demonstrating the power of timing attacks on weakly secured servers.
                                 </p>
 
-                                <img src="./resources/hacker.svg" style="height: 40vh; width: auto; display: flex; justify-content: center; align-items: center; margin: auto;">
+                                <img src="./resources/hacker.svg"
+                                    style="height: 40vh; width: auto; display: flex; justify-content: center; align-items: center; margin: auto;">
 
                                 <p>Insert project description here.</p>
                             </div>
@@ -151,6 +154,11 @@
                         <div class="content">
                             <div class="skillset">
                                 <div class="item">
+                                    <h3 class="skill-title">THIS BAR SHIT IS ASS. INSTEAD DO THIS</h3>
+                                    <h3 class="skill-title">C++: WHAT THE FUCK I DID</h3>
+                                    <h3 class="skill-title">EXAMPLE:</h3>
+                                    <h3 class="skill-title">Excel: Pivot Tables, etc..</h3>
+                                    <br>
                                     <h3 class="skill-title">
                                         C++
                                         <span class="level-label">
@@ -258,9 +266,20 @@
                                     </div>
                                 </div>
 
+                                <div class="item">
+                                    <h3 class="skill-title">
+                                        Jinja2
+                                        <span class="level-label">
+                                            Alright
+                                        </span>
+                                    </h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="20%" style="width: 20%"></div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
-                    </div>
                 </aside>
 
             </div>
